--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Server side API with the four basic functions of persistent storage (CRUD)",
   "main": "crud.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "keywords": [
     "crud",
