--- a/package.json
+++ b/package.json
@@ -1,28 +1,21 @@
 {
-  "name": "bookmark-app",
+  "name": "bookmarks-app",
   "version": "1.0.0",
-  "description": "Server side API with the four basic functions of persistent storage (CRUD)",
-  "main": "crud.js",
+  "description": "",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "nodemon index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [
-    "crud",
-    "api",
-    "create",
-    "add",
-    "update",
-    "delete",
-    "bookmark"
-  ],
-  "author": "Gerardo Galan A00821196",
+  "author": "Gerardo Galan",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.11",
+    "mongoose": "^5.9.10",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.3",
     "uuid": "^7.0.3"
   }
 }
